fix: address PR review comments and improve test coverage
- Rename `initialized` → `initAttempted` with updated Javadoc to
  clarify the flag tracks whether init was attempted, not success
- Rate-limit WARN logging in recordCall() when connection is null
  (log once via `warnedConnectionNull` flag to prevent log spam)
- Add StandardCharsets.UTF_8 to Files.newBufferedReader() calls in
  UsageStatisticsLoader and ToolCallStatisticsBackfill
- Add 8 new tests for ToolCallStatisticsService: hasRecordAt,
  getRecordCount, null-connection safety, isDbMoved, and
  double-init idempotency with functional verification

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>